--- a/styles/temple-large.css
+++ b/styles/temple-large.css
@@ -3,7 +3,7 @@
     display: none;
   }
   
-  .nav-ul {
+  nav .nav-ul {
     flex-direction: column;
     position: absolute;
     top: 100%;
@@ -42,6 +42,7 @@ ul.display {
   display: flex;
 
 }
+
 
   
 }
