--- a/styles/temple-large.css
+++ b/styles/temple-large.css
@@ -13,7 +13,7 @@
     border: 1px solid #ddd;
   }
   
-  ul {
+  nav ul {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
